tercer archivo del repositorio

--- a/pages/cups.html
+++ b/pages/cups.html
@@ -23,17 +23,17 @@
         <nav class="nav"> 
             <!-- div logo--> 
             <div class="logo">
-                <a href="#">
+                <a href="../index.html">
                     <img class="urania" src="../imagenes/logo/logo-urania.png" alt="">
                 </a>
             </div>    
              <!-- div container listas-->       
             <div class="menu">  
                 <ul class=" main_menu">                  
-                    <li class="series"><a href="./pages/series.html">Series</a></li>
-                    <li class="piezas"><a href="./pages/piezas.html">Piezas</a></li>
-                    <li class="sobre_nosotros"><a href="./pages/sobreNosotros.html">Sobre Nosotros</a></li>
-                    <li class="contacto"><a href="./pages/contacto.html">Contactanos</a></li>
+                    <li class="series"><a href="./series.html">Series</a></li>
+                    <li class="piezas"><a href="./piezas.html">Piezas</a></li>
+                    <li class="sobre_nosotros"><a href="./sobreNosotros.html">Sobre Nosotros</a></li>
+                    <li class="contacto"><a href="./contacto.html">Contactanos</a></li>
                     <li class="buscar">
                         <span class="material-symbols-outlined">
                             search
@@ -47,7 +47,7 @@
         <main>
             <section class=" main_section_cups">
                 <div class="cups_desc">
-                    <h2 class="cups_t">CUPS</h2>
+                    <h2 class="cups_t">Cups.</h2>
                     <p class="cups_d">Disfrutá de un buen café en este hermoso pocillo de cerámica</p>
                 </div>
                 
@@ -74,13 +74,15 @@
             <li class="footer_li">Seguinos</li>
             <li class="footer_li">
                 <a class="instagram_logo" href="https://www.instagram.com/urania_ceramicas/" target="_blank">
-                    <img class="ig_logo" src="./imagenes/logo/pngwing.com.png" alt=""></a>        
+                    <img class="ig_logo" src="../imagenes/logo/pngwing.com.png" alt=""></a>        
             </li>
             <li class="footer_li">Contactanos</li>
             <li class="footer_li">
+                <a href="./contacto.html">
                 <span class="material-symbols-outlined">
                     send
                     </span>
+                </a>
             </li>
         </ul> 
     </div> 
