--- a/pages/sobreNosotros.html
+++ b/pages/sobreNosotros.html
@@ -51,7 +51,7 @@
                 </section>
                 <section id="descripcion" class="descripcion_sn">
                     <div class="section_sobre_nosotros">
-                        <h2 class="sn_titulo">SOBRE NOSOTROS</h2>
+                        <h2 class="sn_titulo">Sobre Nosotros.</h2>
                         <p class="sn_parrafo">Cerámica de autora.
                             Piezas únicas hechas a mano.</p>
                         <p class="sn_parrafo">Todas nuestras piezas son únicas, 100 % realizadas a mano, no existen dos piezas iguales.
