archivos con bootstrap entrega correccion ig

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <div class="col-md-6 footer-col mt-3 mb-3">
                   <p>Seguinos</p>
                   <a class="instagram_logo" href="https://www.instagram.com/urania_ceramicas/" target="_blank">
-                  <img class="img-ig" src="../imagenes/logo/pngwing.com.png" alt=""></a>
+                  <img class="img-ig" src="./imagenes/logo/pngwing.com.png" alt=""></a>
               </div>
               <div class="col-md-6 footer-col  mt-3 mb-3">
                   <p>Contactanos</p>
